--- a/Amorem Artis/Amorem Artis/Amorem Artis.csproj
+++ b/Amorem Artis/Amorem Artis/Amorem Artis.csproj
@@ -69,6 +69,12 @@
     <Compile Include="UserControlMaestroModificar.xaml.cs">
       <DependentUpon>UserControlMaestroModificar.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControlSolfeo.xaml.cs">
+      <DependentUpon>UserControlSolfeo.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControlSeccionQuitar.xaml.cs">
+      <DependentUpon>UserControlSeccionQuitar.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControlMaestroQuitar.xaml.cs">
       <DependentUpon>UserControlMaestroQuitar.xaml</DependentUpon>
     </Compile>
@@ -103,6 +109,14 @@
     <Page Include="UserControlMaestroModificar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControlSolfeo.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="UserControlSeccionQuitar.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="UserControlMaestroQuitar.xaml">
       <SubType>Designer</SubType>
