--- a/Amorem Artis/Amorem Artis/Amorem Artis.csproj
+++ b/Amorem Artis/Amorem Artis/Amorem Artis.csproj
@@ -69,6 +69,12 @@
     <Compile Include="UserControlMaestroModificar.xaml.cs">
       <DependentUpon>UserControlMaestroModificar.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControlSolfeoAgregar.xaml.cs">
+      <DependentUpon>UserControlSolfeoAgregar.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControlSolfeoQuitar.xaml.cs">
+      <DependentUpon>UserControlSolfeoQuitar.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControlSolfeo.xaml.cs">
       <DependentUpon>UserControlSolfeo.xaml</DependentUpon>
     </Compile>
@@ -109,6 +115,14 @@
     <Page Include="UserControlMaestroModificar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControlSolfeoAgregar.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="UserControlSolfeoQuitar.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="UserControlSolfeo.xaml">
       <Generator>MSBuild:Compile</Generator>
