--- a/Amorem Artis/Amorem Artis/Amorem Artis.csproj
+++ b/Amorem Artis/Amorem Artis/Amorem Artis.csproj
@@ -69,6 +69,9 @@
       <DependentUpon>Login.xaml</DependentUpon>
     </Compile>
     <Compile Include="SubItem.cs" />
+    <Compile Include="UserControlAlumno.xaml.cs">
+      <DependentUpon>UserControlAlumno.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControlInstrumentos.xaml.cs">
       <DependentUpon>UserControlInstrumentos.xaml</DependentUpon>
     </Compile>
@@ -97,6 +100,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="UserControlAlumno.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UserControlInstrumentos.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
