--- a/Amorem Artis/Amorem Artis/Amorem Artis.csproj
+++ b/Amorem Artis/Amorem Artis/Amorem Artis.csproj
@@ -72,17 +72,38 @@
     <Compile Include="UserControlAlumno.xaml.cs">
       <DependentUpon>UserControlAlumno.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControlClase.xaml.cs">
+      <DependentUpon>UserControlClase.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControlClaseMaestro.xaml.cs">
+      <DependentUpon>UserControlClaseMaestro.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControlInstrumentos.xaml.cs">
       <DependentUpon>UserControlInstrumentos.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UserControlMaestros.xaml.cs">
+      <DependentUpon>UserControlMaestros.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UserControlMenuItem.xaml.cs">
       <DependentUpon>UserControlMenuItem.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControlPadres.xaml.cs">
+      <DependentUpon>UserControlPadres.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControlPagosAlumno.xaml.cs">
+      <DependentUpon>UserControlPagosAlumno.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControlPagosMaestro.xaml.cs">
+      <DependentUpon>UserControlPagosMaestro.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControlSeccion.xaml.cs">
       <DependentUpon>UserControlSeccion.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControlSolfeo.xaml.cs">
       <DependentUpon>UserControlSolfeo.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControlUsuarios.xaml.cs">
+      <DependentUpon>UserControlUsuarios.xaml</DependentUpon>
     </Compile>
     <Page Include="Login.xaml">
       <SubType>Designer</SubType>
@@ -104,11 +125,35 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UserControlClase.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControlClaseMaestro.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UserControlInstrumentos.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="UserControlMaestros.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UserControlMenuItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControlPadres.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControlPagosAlumno.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControlPagosMaestro.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -117,6 +162,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UserControlSolfeo.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControlUsuarios.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
