--- a/Amorem Artis/Amorem Artis/App.config
+++ b/Amorem Artis/Amorem Artis/App.config
@@ -6,6 +6,9 @@
         <add name="Amorem_Artis.Properties.Settings.AmoremArtisConnectionString"
             connectionString="Data Source=(local)\sqlexpress;Initial Catalog=AmoremArtis;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="Amorem_Artis.Properties.Settings.AmoremArtisConnectionString1"
+            connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=AmoremArtis;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
