--- a/Amorem Artis/Amorem Artis/Amorem Artis.csproj
+++ b/Amorem Artis/Amorem Artis/Amorem Artis.csproj
@@ -46,6 +46,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -70,6 +71,11 @@
       <DependentUpon>AmoremArtisDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Conexion.cs" />
+    <Compile Include="DataClassesCursos.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DataClassesCursos.dbml</DependentUpon>
+    </Compile>
     <Compile Include="Encriptacion.cs" />
     <Compile Include="ItemMenu.cs" />
     <Compile Include="Login.xaml.cs">
@@ -78,6 +84,9 @@
     <Compile Include="SubItem.cs" />
     <Compile Include="UserControlAlumno.xaml.cs">
       <DependentUpon>UserControlAlumno.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UserControlEstado.xaml.cs">
+      <DependentUpon>UserControlEstado.xaml</DependentUpon>
     </Compile>
     <Compile Include="UserControlInstrumentos.xaml.cs">
       <DependentUpon>UserControlInstrumentos.xaml</DependentUpon>
@@ -135,6 +144,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="UserControlAlumno.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UserControlEstado.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -220,6 +233,14 @@
     <None Include="AmoremArtisDataSet.xss">
       <DependentUpon>AmoremArtisDataSet.xsd</DependentUpon>
     </None>
+    <None Include="DataClassesCursos.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <LastGenOutput>DataClassesCursos.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DataClassesCursos.dbml.layout">
+      <DependentUpon>DataClassesCursos.dbml</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -237,6 +258,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Recursos\Logo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
